[gd_scene load_steps=7 format=3 uid="uid://b2jqodwsfc7w4"]

[ext_resource type="Script" uid="uid://n82brx4fqkmm" path="res://src/scenes/stages/level.gd" id="1_6v322"]
[ext_resource type="PackedScene" uid="uid://gepvpjeoypa3" path="res://src/scenes/stages/map.tscn" id="2_6v322"]
[ext_resource type="PackedScene" uid="uid://d3x8mnmy1s3rf" path="res://src/scenes/objects/npc/Npc.tscn" id="2_c072t"]
[ext_resource type="PackedScene" uid="uid://cd7yl2x0c4ltl" path="res://src/scenes/objects/player/Hen.tscn" id="2_ih7p5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6v322"]
size = Vector2(10, 725)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1yk2"]
size = Vector2(10, 720)

[node name="Stage" type="Node2D"]
script = ExtResource("1_6v322")

[node name="C" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SVPC" type="SubViewportContainer" parent="C"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SVP" type="SubViewport" parent="C/SVPC"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Node" type="Node" parent="C/SVPC/SVP"]

[node name="Map" parent="C/SVPC/SVP/Node" instance=ExtResource("2_6v322")]

[node name="Node2" type="Node" parent="C/SVPC/SVP"]

[node name="NPC" parent="C/SVPC/SVP/Node2" instance=ExtResource("2_c072t")]
position = Vector2(159, 422)

[node name="Hen" parent="C/SVPC/SVP/Node2" instance=ExtResource("2_ih7p5")]
position = Vector2(1161, 318)

[node name="Camera" type="Camera2D" parent="C/SVPC/SVP"]
anchor_mode = 0

[node name="L_Portal" type="Area2D" parent="C/SVPC/SVP/Camera"]
collision_layer = 4

[node name="L_Portal" type="CollisionShape2D" parent="C/SVPC/SVP/Camera/L_Portal"]
position = Vector2(-45, 357.5)
shape = SubResource("RectangleShape2D_6v322")
debug_color = Color(0.721573, 0.390079, 0.720596, 0.42)

[node name="R_Portal" type="Area2D" parent="C/SVPC/SVP/Camera"]
position = Vector2(1278, 0)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="C/SVPC/SVP/Camera/R_Portal"]
position = Vector2(45, 355.5)
shape = SubResource("RectangleShape2D_u1yk2")

[connection signal="body_entered" from="C/SVPC/SVP/Camera/L_Portal" to="." method="on_Left_teleport"]
[connection signal="body_entered" from="C/SVPC/SVP/Camera/R_Portal" to="." method="on_Right_teleport"]
